--- a/sleep_analysis.ipynb
+++ b/sleep_analysis.ipynb
@@ -25993,6 +25993,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sleep duration and REM sleep percentage are positvely correlated with Sleep Quality. Alcohol consumption is the most negatively correalted feature with Sleep Quality.\n",
+    "\n",
     "## Linear Models\n",
     "\n",
     "A linear regression model, Ridge Regression model, and LASSO Regression model model will be used to evaluate the sleep variables and predict sleep quality."
@@ -26012,9 +26014,7 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statsmodels.api as sm\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from scipy import stats\n",
-    "import numpy as np"
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -26861,7 +26861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -26895,7 +26895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -27239,7 +27239,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## Conclusion\n",
+    "\n",
+    "After evaluating linear models with missing values set to 0 and the mean value the best results are for a Linear Regression model with mean values for missing values. The data and model results do not appear to have a linear relationship. A Support Vector Machine (SVM) model was evaluated on the data. Varying the model parameters for the SVM the best parameters were with a Polynomial kernel with degree 2.\n",
+    "\n",
+    "Since the SVM model performed best with a Polynomial kernel of degree 2 the Linear Regression models, Ridge Regression, and Lasso Regression models were re-evaluated with 2 Polynomial features. This greatly improved the model results from before.\n",
+    "\n",
+    "Random Forest Regression and AdaBoost Regression were also used with and without Polynomial features. The Random Forest Regression with Polynomial features performed the best with an MSE of 0.31 and an R² of 0.98.\n",
+    "\n",
+    "The majority of the models have Age and Wakeup time being positively correlated with Sleep Quality. Different models have Smoking status, Exercise frequency, Alcohol consumption, or Sleep efficiency being negatively correlated with Sleep Quality."
    ]
   },
   {
